# ros_training

./: README.md
.devcontainer/: devcontainer.json
.github/resources/: kinova_gen3_lite.srdf  robot.yaml  robot2.yaml  robot3.yaml
.github/scripts/: setup_gazebo.sh  setup_ros2.sh  setup_workspace.sh  to_bash.txt
src/config_tutorial/: CMakeLists.txt  package.xml
src/config_tutorial/launch/: display.launch.py  ur_moveit.launch.py
src/config_tutorial/urdf/: 01_cylinder.urdf  09_macroed.urdf.xacro  09a_macro.urdf.xacro  ur.urdf.xacro
src/node_tutorial/: CMakeLists.txt  package.xml
src/node_tutorial/config/: view_kinova.rviz  view_kinova_combo.rviz  view_kinova_mtc.rviz
src/node_tutorial/launch/: kinova.launch.py  moveit.launch.py  rover_sim.launch.py  ur.launch.py  ur_self.launch.py
src/node_tutorial/resources/: params.yaml
src/node_tutorial/src/: listener.cpp  moveit_movegroup.cpp  moveit_mtc.cpp  tf_broadcaster.cpp
